[package]
name = "picoquic"
version = "0.1.1"
authors = ["Bastian Köcher <git@kchr.de>"]
license = "MIT/Apache-2.0"
categories = ["asynchronous", "network-programming"]
readme = "./README.md"
description = """
Tokio aware picoquic bindings. Picoquic is a minimalist implementation of the QUIC protocol
of the IETF.
"""
repository = "https://github.com/bkchr/picoquic-rs"
keywords = ["quic", "future", "tokio", "protocol", "picoquic"]
edition = "2018"

[badges.travis-ci]
repository = "bkchr/picoquic-rs"

[dependencies]
bytes = "0.4.12"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
libc = "0.2"
log = "0.4"
openssl = "0.10.24"
openssl-sys = "0.9.49"
parking_lot = "0.9.0"
socket2 = "0.3"
tokio-executor = "0.1"
tokio-timer = "0.2"
tokio-udp = "0.1"
smallvec = "0.6"

[dependencies.picoquic-sys]
path = "./picoquic-sys/"
version = "0.1.0"

[dev-dependencies]
timebomb = "0.1"
tokio = "0.1.22"
rand = "0.7.2"

[workspace]
