[package]
name = "picoquic-sys"
version = "0.1.0"
authors = ["Bastian Köcher <git@kchr.de>"]
build = "build.rs"
license = "MIT/Apache-2.0"
workspace = ".."
categories = ["asynchronous", "network-programming"]
repository = "https://github.com/bkchr/picoquic-rs"
description = """
Provides bindings to the `picoquic` c-library. Please don't use this crate directly.
Use the `picoquic` crate.
"""

[dependencies]
openssl-sys = "^0.9.28"

[build-dependencies]
cmake = "0.1"
cc = { version = "1.0", features = ["parallel"] }
glob = "0.2"
bindgen = "0.37"
